--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         @media (min-width: 768px) {
             .combo-overlay {
-                height: 339px;
+                height: 339px !important;
             }
         }
 
