--- a/index.html
+++ b/index.html
@@ -1910,7 +1910,7 @@
         </div>
     </div> -->
 
-    <div class="reviews-section">
+    <!-- <div class="reviews-section">
         <div class="reviews-header">KHÁCH HÀNG NHẬN XÉT</div>
 
 
@@ -2024,7 +2024,7 @@
                 Xem thêm <span class="dots"><span>.</span><span>.</span><span>.</span></span>
             </button>
         </div>
-    </div>
+    </div> -->
 
     <div class="box" style="top: 651px;
     left: 20px;"></div>
@@ -2078,11 +2078,11 @@
     <div class="box1" style="top:4744px; left:273px;"></div>
     <div class="box2" style="top:4888px; left:272px;"></div>
 
-    <div class="footer">
+    <!-- <div class="footer">
         <img src="/images/footer2.png" alt="Footer">
-    </div>
+    </div> -->
 
-    <script>
+    <!-- <script>
         window.addEventListener('scroll', function () {
             const comboOverlay = document.querySelector('.combo-overlay');
             const fixedCombo = document.getElementById('fixedCombo');
@@ -2210,7 +2210,7 @@
 
 
         window.onload = updateCountdown;
-    </script>
+    </script> -->
 </body>
 
 </html>
