--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         .box2:hover {
             animation-play-state: paused;
             transform: scale(1.1);
-            filter: brightness(1.5);
+            /* filter: brightness(1.5); */
             transition: all 0.3s ease;
         }
         
